--- a/testbench/tests/filter/makefile
+++ b/testbench/tests/filter/makefile
@@ -19,7 +19,7 @@ crt0.o: ../dhry/crt0.s
 printf.o: ../dhry/printf.c
 	$(CC) $(CFLAGS) -c ../dhry/printf.c
 
-filter.o: filter.c
+filter.o: filter.c variables.h
 	$(CC) $(CFLAGS) -c filter.c
 
 filter.exe: crt0.o printf.o filter.o
@@ -27,3 +27,18 @@ filter.exe: crt0.o printf.o filter.o
 
 ../../../program.hex: filter.exe
 	$(OBJCOPY) -O verilog filter.exe ../../../program.hex
+
+hexes: variable4 4.hex 8.hex 16.hex 32.hex 64.hex 128.hex
+
+variable4:
+	touch variables.h
+	echo "#define N 4" > variables.h
+
+%.hex: crt0.o printf.o
+	echo "#define N $*" > variables.h
+	$(CC) $(CFLAGS) -c filter.c
+	$(LD) -mabi=ilp32 -march=rv32imc -Wl,-Map=filter.map -lgcc -T$(LDSCRIPT) -o filter.exe crt0.o filter.o printf.o -nostartfiles
+	$(OBJCOPY) -O verilog filter.exe filter$@
+	mkdir filter$*
+	cp filter$@ filter$*/program.hex
+	mv filter$@ filter$*
