--- a/testbench/tests/grayscale/makefile
+++ b/testbench/tests/grayscale/makefile
@@ -19,7 +19,7 @@ crt0.o: ../dhry/crt0.s
 printf.o: ../dhry/printf.c
 	$(CC) $(CFLAGS) -c ../dhry/printf.c
 
-grayscale.o: grayscale.c
+grayscale.o: grayscale.c variables.h
 	$(CC) $(CFLAGS) -c grayscale.c
 
 grayscale.exe: crt0.o printf.o grayscale.o
@@ -27,3 +27,18 @@ grayscale.exe: crt0.o printf.o grayscale.o
 
 ../../../program.hex: grayscale.exe
 	$(OBJCOPY) -O verilog grayscale.exe ../../../program.hex
+
+hexes: variable4 4.hex 8.hex 16.hex 32.hex 64.hex 128.hex
+
+variable4:
+	touch variables.h
+	echo "#define N 4" > variables.h
+
+%.hex: crt0.o printf.o
+	echo "#define N $*" > variables.h
+	$(CC) $(CFLAGS) -c grayscale.c
+	$(LD) -mabi=ilp32 -march=rv32imc -Wl,-Map=grayscale.map -lgcc -T$(LDSCRIPT) -o grayscale.exe crt0.o grayscale.o printf.o -nostartfiles
+	$(OBJCOPY) -O verilog grayscale.exe gray$@
+	mkdir gray$*
+	cp gray$@ gray$*/program.hex
+	mv gray$@ gray$*
