--- a/testbench/tests/grayscale_sparrow/makefile
+++ b/testbench/tests/grayscale_sparrow/makefile
@@ -19,7 +19,7 @@ crt0.o: ../dhry/crt0.s
 printf.o: ../dhry/printf.c
 	$(CC) $(CFLAGS) -c ../dhry/printf.c
 
-grayscale_sparrow.o: grayscale_sparrow.c
+grayscale_sparrow.o: grayscale_sparrow.c variables.h
 	$(CC) $(CFLAGS) -c grayscale_sparrow.c
 
 grayscale_sparrow.exe: crt0.o printf.o grayscale_sparrow.o
@@ -27,3 +27,18 @@ grayscale_sparrow.exe: crt0.o printf.o grayscale_sparrow.o
 
 ../../../program.hex: grayscale_sparrow.exe
 	$(OBJCOPY) -O verilog grayscale_sparrow.exe ../../../program.hex
+
+hexes: variable4 4.hex 8.hex 16.hex 32.hex 64.hex 128.hex
+
+variable4:
+	touch variables.h
+	echo "#define N 4" > variables.h
+
+%.hex: crt0.o printf.o
+	echo "#define N $*" > variables.h
+	$(CC) $(CFLAGS) -c grayscale_sparrow.c
+	$(LD) -mabi=ilp32 -march=rv32imc -Wl,-Map=grayscale_sparrow.map -lgcc -T$(LDSCRIPT) -o grayscale_sparrow.exe crt0.o grayscale_sparrow.o printf.o -nostartfiles
+	$(OBJCOPY) -O verilog grayscale_sparrow.exe gray_sprw$@
+	mkdir gray_sprw$*
+	cp gray_sprw$@ gray_sprw$*/program.hex
+	mv gray_sprw$@ gray_sprw$*
